--- a/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
@@ -6,7 +6,7 @@ describe('Change Password Screen Tests', () => {
   const newPassword = process.env.E2E_NEW_PASSWORD || 'new-password';
 
   before(async () => {
-    await device.reloadReactNative()
+    await Utils.reloadApp()
     await Utils.loginAsUser()
   })
   after(async () => {
@@ -15,7 +15,7 @@ describe('Change Password Screen Tests', () => {
   })
 
   beforeEach(async () => {
-    await device.reloadReactNative()
+    await Utils.reloadApp()
     await navigateToChangePasswordScreen()
   })
 
