--- a/generators/app/templates/e2e/account/login-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/login-screen.spec.js.ejs
@@ -2,7 +2,7 @@ const Utils = require('../utils')
 
 describe('Login Screen Tests', () => {
   beforeEach(async () => {
-    await device.reloadReactNative()
+    await Utils.reloadApp()
   })
 
   it('should close on cancel button press', async () => {
