--- a/generators/app/templates/e2e/websockets/chat-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/websockets/chat-screen.spec.js.ejs
@@ -2,7 +2,7 @@ const Utils = require('../utils')
 
 describe('Chat Screen Tests', () => {
   before(async () => {
-    await device.reloadReactNative()
+    await Utils.reloadApp()
     await Utils.loginAsUser()
   })
   after(async () => {
@@ -11,7 +11,7 @@ describe('Chat Screen Tests', () => {
   })
 
   beforeEach(async () => {
-    await device.reloadReactNative()
+    await Utils.reloadApp()
     await navigateToChatScreen()
   })
 
