--- a/generators/app/templates/.detoxrc.json.ejs
+++ b/generators/app/templates/.detoxrc.json.ejs
@@ -1,24 +1,24 @@
 {
   "configurations": {
     "ios.sim.debug": {
-      "binaryPath": "bin/Exponent.app",
+      "binaryPath": "e2e/Exponent.app",
       "type": "ios.simulator",
       "name": "iPhone 11"
     },
     "ios.sim.release": {
-      "binaryPath": "bin/Exponent.app",
+      "binaryPath": "e2e/Exponent.app",
       "type": "ios.simulator",
       "name": "iPhone 11"
     },
     "android.emu.debug": {
-      "binaryPath": "bin/Exponent.app",
+      "binaryPath": "e2e/Exponent.app",
       "type": "android.emulator",
       "device": {
         "avdName": "Nexus_6_API_29"
       }
     },
     "android.emu.release": {
-      "binaryPath": "bin/Exponent.app",
+      "binaryPath": "e2e/Exponent.app",
       "type": "android.emulator",
       "device": {
         "avdName": "Nexus_6_API_29"
