--- a/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
@@ -20,9 +20,9 @@ describe('Change Password Screen Tests', () => {
   })
 
   const navigateToChangePasswordScreen = async () => {
-    await expect(element(by.id('launchScreen'))).toBeVisible()
-    await element(by.id('menuButton')).tap()
-    await element(by.id('changePasswordDrawerButton')).tap()
+    await Utils.waitForSplashScreen();
+    await Utils.tapFirstElementByLabel('Menu Button');
+    await Utils.tapFirstElementByLabel('Change Password');
   }
 
   const changePassword = async (oldPassword, newPassword) => {
