--- a/generators/app/templates/e2e/account/settings-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/settings-screen.spec.js.ejs
@@ -16,9 +16,9 @@ describe('Settings Screen Tests', () => {
   })
 
   const navigateToSettingsScreen = async () => {
-    await expect(element(by.id('launchScreen'))).toBeVisible()
-    await element(by.id('menuButton')).tap()
-    await element(by.id('settingsDrawerButton')).tap()
+    await Utils.waitForSplashScreen();
+    await Utils.tapFirstElementByLabel('Menu Button');
+    await Utils.tapFirstElementByLabel('Settings');
   }
 
   it('should display the settings form', async () => {
