--- a/generators/entity/templates/entity-e2e-test.js.ejs
+++ b/generators/entity/templates/entity-e2e-test.js.ejs
@@ -17,9 +17,9 @@ describe('<%= name %> Screen Tests', () => {
   })
 
   const navigateTo<%= name %>Screen = async () => {
-    await expect(element(by.id('launchScreen'))).toBeVisible()
-    await element(by.id('menuButton')).tap()
-    await element(by.id('entitiesDrawerButton')).tap()
+    await Utils.waitForSplashScreen();
+    await Utils.tapFirstElementByLabel('Menu Button');
+    await Utils.tapFirstElementByLabel('Entities');
     await Utils.scrollTo('<%= camelCaseName %>EntityScreenButton', 'entityScreenScrollList')
     await element(by.id('<%= camelCaseName %>EntityScreenButton')).tap()
   }
