get account detox tests working

--- a/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
@@ -47,7 +47,7 @@ function ChangePasswordScreen(props) {
   const confirmPasswordRef = createRef();
 
   return (
-    <KeyboardAwareScrollView contentContainerStyle={styles.container}>
+    <KeyboardAwareScrollView contentContainerStyle={styles.container} testID="changePasswordScreen">
       <View style={styles.formContainer}>
         <Text style={styles.errorText}>{error}</Text>
         <Form
@@ -57,6 +57,7 @@ function ChangePasswordScreen(props) {
           ref={formRef}>
           <FormField
             ref={currentPasswordRef}
+            testID="currentPasswordInput"
             name="currentPassword"
             label="Current Password"
             placeholder="Enter current password"
@@ -68,6 +69,7 @@ function ChangePasswordScreen(props) {
           />
           <FormField
             ref={newPasswordRef}
+            testID="newPasswordInput"
             name="newPassword"
             label="New Password"
             placeholder="Enter new password"
@@ -79,6 +81,7 @@ function ChangePasswordScreen(props) {
           />
           <FormField
             ref={confirmPasswordRef}
+            testID="confirmPasswordInput"
             name="confirmPassword"
             label="Confirm Password"
             placeholder="Enter new password"
@@ -88,7 +91,7 @@ function ChangePasswordScreen(props) {
             onSubmitEditing={() => formRef?.current?.submitForm()}
             textContentType="password"
           />
-          <FormButton title={'Change Password'} />
+          <FormButton testID="changePasswordSubmitButton" title={'Change Password'} />
         </Form>
       </View>
     </KeyboardAwareScrollView>
