--- a/generators/app/templates/app/shared/components/form/jhi-form-button.js.ejs
+++ b/generators/app/templates/app/shared/components/form/jhi-form-button.js.ejs
@@ -4,12 +4,11 @@ import { ApplicationStyles } from '../../themes';
 
 import { Text, TouchableOpacity } from 'react-native';
 
-export default React.forwardRef((props, ref) => {
-  const { title } = props;
+export default React.forwardRef(({ title, ...otherProps}, ref) => {
   const { handleSubmit } = useFormikContext();
 
   return (
-    <TouchableOpacity style={[ApplicationStyles.screen.button]} onPress={handleSubmit} ref={ref}>
+    <TouchableOpacity style={[ApplicationStyles.screen.button]} onPress={handleSubmit} ref={ref} {...otherProps}>
       <Text style={ApplicationStyles.screen.buttonText}>{title}</Text>
     </TouchableOpacity>
   );
