--- a/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
@@ -1,4 +1,4 @@
-const Utils = require('../utils')
+const Utils = require('../utils');
 
 describe('Change Password Screen Tests', () => {
   const username = process.env.E2E_USERNAME || 'user';
@@ -6,50 +6,43 @@ describe('Change Password Screen Tests', () => {
   const newPassword = process.env.E2E_NEW_PASSWORD || 'new-password';
 
   before(async () => {
-    await Utils.reloadApp()
-    await Utils.loginAsUser()
-  })
+    await Utils.reloadApp();
+    await Utils.loginAsUser();
+  });
   after(async () => {
-    await Utils.goBack()
-    await Utils.logout()
-  })
+    await Utils.logout();
+  });
 
   beforeEach(async () => {
-    await Utils.reloadApp()
-    await navigateToChangePasswordScreen()
-  })
+    await Utils.reloadApp();
+    await navigateToChangePasswordScreen();
+  });
 
   const navigateToChangePasswordScreen = async () => {
     await Utils.waitForSplashScreen();
     await Utils.tapFirstElementByLabel('Menu Button');
     await Utils.tapFirstElementByLabel('Change Password');
-  }
+  };
 
   const changePassword = async (oldPassword, newPassword) => {
-    await element(by.id('currentPasswordInput')).replaceText(oldPassword)
-    await element(by.id('newPasswordInput')).replaceText(newPassword)
-    await element(by.id('confirmPasswordInput')).replaceText(newPassword)
-    await element(by.id('changePasswordSubmitButton')).tap()
-  }
-
-  it('should display the change password form', async () => {
-    await expect(element(by.id('currentPasswordInput'))).toBeVisible()
-    await expect(element(by.id('newPasswordInput'))).toBeVisible()
-    await expect(element(by.id('confirmPasswordInput'))).toBeVisible()
-  })
+    await element(by.id('currentPasswordInput')).replaceText(oldPassword);
+    await element(by.id('newPasswordInput')).replaceText(newPassword);
+    await element(by.id('confirmPasswordInput')).replaceText(newPassword);
+    await Utils.closeKeyboard('changePasswordScreen');
+    await element(by.id('changePasswordSubmitButton')).tap();
+  };
 
   it('should display a popup on change password success', async () => {
-    await changePassword(password, newPassword)
-    await expect(element(by.text('Password changed'))).toBeVisible()
-    await element(by.text('OK')).tap()
-    await changePassword(newPassword, password)
-    await expect(element(by.text('Password changed'))).toBeVisible()
-    await element(by.text('OK')).tap()
-  })
+    await changePassword(password, newPassword);
+    await expect(element(by.label('Password changed'))).toBeVisible();
+    await Utils.tapFirstElementByLabel('DISMISS');
+    await changePassword(newPassword, password);
+    await expect(element(by.label('Password changed'))).toBeVisible();
+    await Utils.tapFirstElementByLabel('DISMISS');
+  });
 
   it('should display a popup on change password failure', async () => {
-    await changePassword('invalid-password', 'invalid-password')
-    await expect(element(by.text('Error'))).toBeVisible()
-    await element(by.text('OK')).tap()
-  })
-})
+    await changePassword('invalid-password', 'invalid-password');
+    await expect(element(by.label('Incorrect password'))).toBeVisible();
+  });
+});
