--- a/generators/entity/templates/entity-edit-screen.js.ejs
+++ b/generators/entity/templates/entity-edit-screen.js.ejs
@@ -108,7 +108,7 @@ function <%= name %>EntityEditScreen(props) {
                 <%- formAttributes %>
           />
           <%_ }) _%>
-            <FormButton title={'Save'} />
+            <FormButton title={'Save'} testID={'submitButton'} />
           </Form>
         )}
       </KeyboardAwareScrollView>
