--- a/generators/entity/templates/entity-detail-screen.js.ejs
+++ b/generators/entity/templates/entity-detail-screen.js.ejs
@@ -18,7 +18,7 @@ function <%= name %>EntityDetailScreen(props) {
   useFocusEffect(
     React.useCallback(() => {
       if (!route.params || !route.params.entityId) {
-        navigation.canGoBack() ? navigation.goBack() : navigation.navigate('FieldTestEntityEntity');
+        navigation.canGoBack() ? navigation.goBack() : navigation.navigate('<%= name %>Entity');
       } else {
         get<%= name %>(route.params.entityId);
       }
